# The-Lake-House

./: README.md  create-evidence-0.0.1.tgz  dev.duckdb  package-lock.json  pyproject.toml
evidence-test/: package-lock.json  package.json
sales_pipeline/: README.md  check_db.py  config.py  data_loadr.py  data_xtractor.py  dbt_project.yml  dbt_run.py  dev.duckdb  docker-compose.yml  extract_data.py  generate_rsa_keys.py  load_data.py  load_data_obsolete.py  main.py  package-lock.json  run_pipeline.sh  sales_generator.py  snowflake_private_key.p8  snowflake_public_key.pub
sales_pipeline/data/: Vw_Month_to_month_revenue.csv  query_history.csv  vw_sales_by_prod_ctgry.csv  warehouse.duckdb
sales_pipeline/data/raw/: product_cat.csv  sales_raw.csv
sales_pipeline/models/: sources.yml  src_postgres.yml
sales_pipeline/models/marts/: dim_products.sql  dim_products.yml  fct_revenue.sql  fct_revenue.yml  fct_sales.sql  fct_sales.yml  vw_mom_revenue.sql  vw_mom_revenue.yml  vw_sales_by_prod_ctgry.sql  vw_sales_by_prod_ctgry.yml
sales_pipeline/models/staging/: schema.yml  stg_products.sql  stg_products.yml  stg_sales.sql  stg_sales.yml
sales_pipeline/snapshots/: scd_products.sql
sales_pipeline/tests/: assert_negative_revenue.sql
src/the_lake_house/: __init__.py  main.py
tests/: test_main.py
