[project]
name = "the-lake-house"
version = "0.1.0"
description = "A Python project scaffold for The Lake House."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
thelaker = "the_lake_house.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
